--- a/server/package.json
+++ b/server/package.json
@@ -10,19 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
+    "@mui/material": "^5.11.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.0",
-    "mongoose-unique-validator": "^3.1.0",
-    "passport": "^0.5.3",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
+    "mongoose": "^6.8.1",
     "socket.io": "^4.5.4"
   }
 }
